--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "Node16",
+    "target": "ES2020",
+    "module": "nodenext",
     "lib": ["ES2018", "DOM", "DOM.Iterable", "ES2015"],
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "moduleResolution": "Node16",
+    "moduleResolution": "NodeNext",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
