--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "crypto-wrapper": ["src/utils/crypto-wrapper.ts"]
+    }
   },
-  "include": ["src"],
+  "include": ["src/*", "src/utils/crypto-wrapper.ts"],
   "exclude": ["node_modules", "dev", "tests", "lib"],
 }
